improved formatting of html and altered the unique ID of the trigger set the font size of the tags surrounding block to zero to ensure no white space creeps in

--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -31,6 +31,7 @@
   z-index: $z-foreground;
   position: relative;
   padding-top: baseline-unit(1);
+  font-size: 0; // stops spaces creeping in between tags
 
   @include respond-to($mq-m) {
     text-align: right;
